implement in correct way